@@ -21,6 +21,7 @@ Erlend Aasland
 Heikki Junes
 Jeff Smith
 John Williams
+Jonatan Liljedahl
 Juergen Reuter
 Juliusz Chroboczek
 Matthias Neeracher
