@@ -17,6 +17,12 @@ struct Line_interface
   static bool has_interface (Grob *);
   static Stencil make_dashed_line (Real th, Offset from, Offset to, Real, Real);
   static Stencil make_line (Real th, Offset from, Offset to);
+  static Stencil make_arrow (Offset beg, Offset end, Real thick,
+			     Real length, Real width);
+  static Stencil arrows (Grob *me, Offset from, Offset to,
+			 bool from_arrow,
+			 bool to_arrow);
+
 };
 
 #endif /* LINE_INTERFACE_HH */
