@@ -1,3 +1,14 @@
+2005-04-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/paper-score.cc (process): run get_paper_systems() only once.
+
+	* lily/line-interface.cc (make_arrow): new function. Patch by
+	Jonatan Liljedahl <http://kymatica.com>
+	(arrows): idem.
+
+	* lily/line-spanner.cc (line_stencil): add arrows.
+	
+
 2005-04-18  Mathieu Giraud  <magiraud@free.fr>
 
 	* input/test/chord-names-german.ly: update for italian/french chords
